- Raise my limit for sgml2xml work - Sort by username while here
Approved by:	doceng (implicit)


git-svn-id: https://svn.freebsd.org/doc/svnadmin@39403 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/conf/sizelimit.conf
+++ b/conf/sizelimit.conf
@@ -14,5 +14,6 @@
 # If you add just your name here, you get 10 times that.  (10240000)
 
 # First field is username, second field is the raised limit required.
-hrs
 blackend
+gabor
+hrs
