Hook building-products to the build.
git-svn-id: https://svn.freebsd.org/doc/head@39446 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/fr_FR.ISO8859-1/articles/Makefile
+++ b/fr_FR.ISO8859-1/articles/Makefile
@@ -6,7 +6,8 @@
 #    Original revision: 1.3
 #
 
-SUBDIR = committers-guide
+SUBDIR = building-products
+SUBDIR+= committers-guide
 SUBDIR+= contributing
 SUBDIR+= contributing-ports
 SUBDIR+= contributors
