- Add new Brazilian Portuguese translation of the linux-users article
PR:		docs/170531
Submitted by:	Edson Brandi <ebrandi@fugspbr.org>
Obtained from:	The FreeBSD Brazilian Portuguese Documentation Project
		(http://doc.fug.com.br)


git-svn-id: https://svn.freebsd.org/doc/head@39501 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/pt_BR.ISO8859-1/articles/Makefile.inc
+++ b/pt_BR.ISO8859-1/articles/Makefile.inc
@@ -2,7 +2,7 @@
 # The FreeBSD Documentation Project
 # The FreeBSD Brazilian Portuguese Documentation Project
 #
-# Original revision: 1.4
+# Original revision: r38826
 # 
 # $FreeBSD$
 #
