--- a/pt_BR.ISO8859-1/articles/Makefile
+++ b/pt_BR.ISO8859-1/articles/Makefile
@@ -1,15 +1,16 @@
-# $FreeBSD$
 #
 # Build the FreeBSD FAQ
 #
 # The FreeBSD Documentation Project
 # The FreeBSD Brazilian Portuguese Documentation Project
 #
-# Original revision: 1.36
+# Original revision: r38826
 #
+# $FreeBSD$
 
 SUBDIR =
 SUBDIR+= contributing
+SUBDIR+= linux-users
 
 DOC_PREFIX?= ${.CURDIR}/../..
 .include "${DOC_PREFIX}/share/mk/doc.project.mk"
