- Add new Brazilian Portuguese translation of the freebsd-questions article
PR:		docs/170710
Submitted by:	Edson Brandi <ebrandi@fugspbr.org>
Obtained from:	The FreeBSD Brazilian Portuguese Documentation Project
		(http://doc.fug.com.br)


git-svn-id: https://svn.freebsd.org/doc/head@39505 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/pt_BR.ISO8859-1/articles/Makefile
+++ b/pt_BR.ISO8859-1/articles/Makefile
@@ -11,6 +11,7 @@
 SUBDIR =
 SUBDIR+= contributing
 SUBDIR+= explaining-bsd
+SUBDIR+= freebsd-questions
 SUBDIR+= linux-users
 SUBDIR+= problem-reports
 
