--- a/pt_BR.ISO8859-1/articles/Makefile
+++ b/pt_BR.ISO8859-1/articles/Makefile
@@ -10,6 +10,7 @@
 
 SUBDIR =
 SUBDIR+= contributing
+SUBDIR+= contributing-ports
 SUBDIR+= explaining-bsd
 SUBDIR+= freebsd-questions
 SUBDIR+= linux-users
