- Add new Brazilian Portuguese translation of the new-users article
PR:		docs/170965
Submitted by:	Edson Brandi <ebrandi@fugspbr.org>
Obtained from:	The FreeBSD Brazilian Portuguese Documentation Project
		(http://doc.fug.com.br)


git-svn-id: https://svn.freebsd.org/doc/head@39507 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/pt_BR.ISO8859-1/articles/Makefile
+++ b/pt_BR.ISO8859-1/articles/Makefile
@@ -14,6 +14,7 @@ SUBDIR+= contributing-ports
 SUBDIR+= explaining-bsd
 SUBDIR+= freebsd-questions
 SUBDIR+= linux-users
+SUBDIR+= new-users
 SUBDIR+= problem-reports
 
 DOC_PREFIX?= ${.CURDIR}/../..
