- Merge the following from the English version:
	r35054 -> r39545	head/ja_JP.eucJP/htdocs/ports/Makefile
	r39523 -> r39545	head/ja_JP.eucJP/htdocs/ports/index.sgml

- Correct link.

  head/ja_JP.eucJP/htdocs/ports/index.sgml


git-svn-id: https://svn.freebsd.org/doc/head@39552 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/ja_JP.eucJP/htdocs/ports/Makefile
+++ b/ja_JP.eucJP/htdocs/ports/Makefile
@@ -1,6 +1,6 @@
 # $FreeBSD$
 # The FreeBSD Japanese Documentation Project
-# Original revision: 1.50
+# Original revision: r39545
 
 .if exists(../Makefile.conf)
 .include "../Makefile.conf"
@@ -103,8 +103,8 @@ all install clean:
 beforeinstall:
 .else
 beforeinstall:
-	${SED} -i "" -e 's,HREF="growth,href="http://www.FreeBSD.org/ports/growth,' index.html
-	${SED} -i "" -e 's,HREF="growth,href="http://www.FreeBSD.org/ports/growth,' references.html
+	${SED} -i "" -e 's,href="growth,href="http://www.FreeBSD.org/ports/growth,' index.html
+	${SED} -i "" -e 's,href="growth,href="http://www.FreeBSD.org/ports/growth,' references.html
 .endif
 
 .include "${DOC_PREFIX}/share/mk/web.site.mk"
