- Add an index link for multimedia.html
git-svn-id: https://svn.freebsd.org/doc/head@39567 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/multimedia/Makefile.output
+++ b/en_US.ISO8859-1/htdocs/multimedia/Makefile.output
@@ -1,3 +1,4 @@
+# $FreeBSD$
 .if exists(../../Makefile.conf)
 .include "../../Makefile.conf"
 .endif
@@ -7,6 +8,8 @@
 
 DOCS!=		cat multimedia.sgml.created
 DATA=		multimedia.xml
+
+INDEXLINK=	multimedia.html
 
 WEBDIR=		multimedia
 
