- Add new Brazilian Portuguese translation of the Mirroring FreeBSD article
Obtained from:	The FreeBSD Brazilian Portuguese Documentation Project
		(http://doc.fug.com.br)

Approved by:    gabor (mentor)


git-svn-id: https://svn.freebsd.org/doc/head@39577 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/pt_BR.ISO8859-1/articles/Makefile
+++ b/pt_BR.ISO8859-1/articles/Makefile
@@ -13,6 +13,7 @@ SUBDIR+= contributing
 SUBDIR+= contributing-ports
 SUBDIR+= explaining-bsd
 SUBDIR+= freebsd-questions
+SUBDIR+= hubs
 SUBDIR+= linux-users
 SUBDIR+= new-users
 SUBDIR+= problem-reports
