- Merge the following from the English version:
	r36769 -> r39569	head/ja_JP.eucJP/htdocs/security/Makefile
	r39262 -> r39576	head/ja_JP.eucJP/books/handbook/introduction/chapter.sgml
	r39467 -> r39575	head/ja_JP.eucJP/books/handbook/mirrors/chapter.sgml


git-svn-id: https://svn.freebsd.org/doc/head@39578 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/ja_JP.eucJP/htdocs/security/Makefile
+++ b/ja_JP.eucJP/htdocs/security/Makefile
@@ -1,6 +1,6 @@
 # $FreeBSD$
 # The FreeBSD Japanese Documentation Project
-# Original revision: 1.18
+# Original revision: r39569
 
 .if exists(../Makefile.conf)
 .include "../Makefile.conf"
@@ -8,6 +8,9 @@
 .if exists(../Makefile.inc)
 .include "../Makefile.inc"
 .endif
+
+#+SUBDIR=	advisories
+#+SUBDIR+=	patches
 
 #DATA=	so_public_key.asc
 #DOCS=	charter.sgml
