- Move the hats article to internal/ [1] - Add a link to the new page and another one to core's hat term limits   policy while here
Discussed with:	imp [1]


git-svn-id: https://svn.freebsd.org/doc/head@39584 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/internal/Makefile
+++ b/en_US.ISO8859-1/htdocs/internal/Makefile
@@ -25,6 +25,7 @@ DOCS+=	policies.sgml
 DOCS+=  releng.sgml
 DOCS+=  resources.sgml
 DOCS+=	statistic.sgml
+DOCS+=	working-with-hats.sgml
 
 INDEXLINK=	internal.html
 
