- XSLTify the multimedia pages with a slightly different approach than the   earlier one.  It does not any more has per-tag and per-source pages   but one page for tags and one for sources with anchors.  With the current   number of entries it will probably be fine for a long time but if once   we need to divide it into smaller chunks, it will be easier with XSLT. - Now the documents are also rebuilt if stylesheets or the source XML   database changes and the build time is drastically decreased.
Reviewed by:	www@


git-svn-id: https://svn.freebsd.org/doc/head@39589 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/multimedia/Makefile
+++ b/en_US.ISO8859-1/htdocs/multimedia/Makefile
@@ -10,30 +10,11 @@
 .include "Makefile.inc"
 .endif
 
-#all: build
-all: build
-	cd output && make all DIRPRFX=multimedia/output/
+XMLDOCS=	multimedia:xsl:multimedia-input.xml:
+XMLDOCS+=	multimedia-rss:xsl:multimedia-input.xml:multimedia.xml
+XMLDOCS+=	sources:xsl:multimedia-input.xml:
+XMLDOCS+=	tags:xsl:multimedia-input.xml:
 
-install:
-	cd output && make install DIRPRFX=multimedia/output/
-
-TEMPLATES=	multimedia.sgml.intro \
-		multimedia.sgml.post \
-		multimedia.sgml.pre \
-		multimedia.html.intro \
-		multimedia.html.post \
-		multimedia.html.pre \
-		multimedia-input.xml
-
-clean:
-	${RM} -rf output ${CLEANFILES}
-
-build:
-	${MKDIR} -p output && \
-	cd output && \
-	${LN} -fs ../Makefile.output Makefile && \
-	( for f in ${TEMPLATES}; do ${LN} -fs ../$$f $$f; done ) && \
-	${PERL} -Tw ../multimedia.pl && \
-	${RM} -f *.html
+INDEXLINK=	multimedia.html
 
 .include "${DOC_PREFIX}/share/mk/web.site.mk"
