--- a/pt_BR.ISO8859-1/articles/Makefile
+++ b/pt_BR.ISO8859-1/articles/Makefile
@@ -14,6 +14,7 @@ SUBDIR+= contributing
 SUBDIR+= contributing-ports
 SUBDIR+= explaining-bsd
 SUBDIR+= freebsd-questions
+SUBDIR+= freebsd-update-server
 SUBDIR+= hubs
 SUBDIR+= linux-users
 SUBDIR+= new-users
