Remove the ability to change the font size on the website.  There are now much better ways of doing this in modern web browsers.  Furthermore, it never worked as well as it should have done, as too much of the website is built around fixed layouts.
It was felt it was best to remove the size switcher from all languages at
once, so that the infrastructure (styleswitcher.js etc.) could be removed
at the same time.

Discussed at:	Cambridge DevSummit, August 2012
Discussed on:	www@
Approved by:	gabor (mentor)


git-svn-id: https://svn.freebsd.org/doc/head@39627 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/layout/js/Makefile
+++ b/en_US.ISO8859-1/htdocs/layout/js/Makefile
@@ -7,7 +7,6 @@
 .include "../Makefile.inc"
 .endif
 
-DATA=   google.js \
-	styleswitcher.js
+DATA=   google.js
 
 .include "${DOC_PREFIX}/share/mk/web.site.mk"
