Replace 'SGML' with 'XML' in Makefile code and comments.  A consequence of this was that 'SGMLFLAGS' had to be changed to 'XMLFLAGS' in share/mk/doc.docbook.mk so that everything continued to build OK.
Approved by:	gabor (mentor)


git-svn-id: https://svn.freebsd.org/doc/head@39665 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/Makefile
+++ b/en_US.ISO8859-1/htdocs/Makefile
@@ -46,7 +46,7 @@ DATA+=	robots.txt
 DATA+=	vendors.html
 
 # Subdirectories
-# SGML
+# XML
 SUBDIR= FAQ
 SUBDIR+= advocacy
 SUBDIR+= commercial
@@ -84,7 +84,7 @@ SUBDIR+= ports
 SUBDIR+= relnotes
 .endif
 
-# Non-SGML
+# Non-XML
 SUBDIR+= cgi
 SUBDIR+= gifs
 SUBDIR+= layout
