--- a/nl_NL.ISO8859-1/htdocs/Makefile
+++ b/nl_NL.ISO8859-1/htdocs/Makefile
@@ -48,7 +48,7 @@ DEPENDSET.community=usergroups events
 DATA+=	vendors.html
 
 # Subdirectories
-# SGML
+# XML
 #SUBDIR= FAQ
 #SUBDIR+= advocacy
 #SUBDIR+= commercial
