Fix various make(1) targets in UTF-8 locale environment.
Reviewed by:	pluknet


git-svn-id: https://svn.freebsd.org/doc/head@39855 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/ru_RU.KOI8-R/htdocs/ports/Makefile
+++ b/ru_RU.KOI8-R/htdocs/ports/Makefile
@@ -81,7 +81,7 @@ ports.size:
 
 # this builds: categories-alpha.xml, categories-grouped.xml,
 # master-index.xml, statistics.ent, <category>.xml
-CATEGORYLIST=`grep "^[a-z]" categories | sed -e s"/,.*//"`
+CATEGORYLIST=`grep "^[a-z]" categories | awk -F, '{print $$1}'`
 categories-alpha.xml: ${INDEX} categories categories.descriptions \
 	packages.exists portindex ports.ent ports.size .NOTMAIN
 	${RM} -f categories-alpha.xml categories-grouped.xml \
