Spell BINDIR correctly (test commit)
Approved by:	doceng (ask for forgiveness)


git-svn-id: https://svn.freebsd.org/doc/svnadmin@39938 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/tools/checkacl/Makefile
+++ b/tools/checkacl/Makefile
@@ -4,7 +4,7 @@ PROG=	checkacl-doc
 SRCS=	checkacl.c
 NO_MAN=	too bad
 NO_SHARED=yes
-DESTDIR=/usr/local/bin
+BINDIR=/usr/local/bin
 BINOWN=root
 BINGRP=wheel
 STRIP=
