Point "forever" url to svnweb, as per base commit
Approved by:	doceng (asking for forgiveness later)


git-svn-id: https://svn.freebsd.org/doc/svnadmin@39939 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/conf/mailer.conf
+++ b/conf/mailer.conf
@@ -202,8 +202,7 @@ generate_diffs = add copy modify
 #
 # The available substitution variable is: rev
 #commit_url = http://diffs.server.com/trac/software/changeset/%(rev)s
-commit_url = http://svn.freebsd.org/changeset/doc/%(rev)s
-#commit_url = http://svn.freebsd.org/viewvc/svntest/?view=rev&rev=%(rev)s
+commit_url = http://svnweb.freebsd.org/changeset/doc/%(rev)s
 
 # Diff URL construction.  For the configured diff URL types, the diff
 # section (which follows the message header) will include the URL
