--- a/en_US.ISO8859-1/htdocs/Makefile
+++ b/en_US.ISO8859-1/htdocs/Makefile
@@ -41,6 +41,7 @@ DEPENDSET.community=usergroups events
 
 DATA=	favicon.ico
 DATA+=	freebsd.css
+DATA+=	google6bb24ed0b804d5e9.html
 DATA+=	index.css
 DATA+=	robots.txt
 DATA+=	vendors.html
