Add hardware, readme, and installation notes.
git-svn-id: https://svn.freebsd.org/doc/head@40406 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/releases/9.1R/Makefile
+++ b/en_US.ISO8859-1/htdocs/releases/9.1R/Makefile
@@ -10,5 +10,8 @@
 DOCS=	schedule.xml
 
 DATA=	docbook.css
+        hardware.html \
+        readme.html \
+        installation.html
 
 .include "${DOC_PREFIX}/share/mk/web.site.mk"
