--- a/en_US.ISO8859-1/htdocs/releases/9.1R/Makefile
+++ b/en_US.ISO8859-1/htdocs/releases/9.1R/Makefile
@@ -9,7 +9,7 @@
 
 DOCS=	schedule.xml
 
-DATA=	docbook.css
+DATA=	docbook.css \
         hardware.html \
         readme.html \
         installation.html
