Add 9.1R release notes.
git-svn-id: https://svn.freebsd.org/doc/head@40459 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/releases/9.1R/Makefile
+++ b/en_US.ISO8859-1/htdocs/releases/9.1R/Makefile
@@ -13,6 +13,7 @@ DATA=	docbook.css \
 	errata.html \
 	hardware.html \
 	readme.html \
+	relnotes-detailed.html \
 	installation.html
 
 .include "${DOC_PREFIX}/share/mk/web.site.mk"
