Add a 'reformat' target, which uses tidy(1) to clean up the raw HTML output.
It is optional to use, but makes it easier to remember how this
works.

Approved by:	re (implicit)
Sponsored by:	The FreeBSD Foundation


git-svn-id: https://svn.freebsd.org/doc/head@43375 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/releases/10.0R/Makefile
+++ b/en_US.ISO8859-1/htdocs/releases/10.0R/Makefile
@@ -7,8 +7,20 @@
 .include "../Makefile.inc"
 .endif
 
+TIDY?=		/usr/local/bin/tidy
 DOCS=	schedule.xml
+
+HTMLFILES=	errata.html \
+		hardware.html \
+		readme.html \
+		relnotes.html
 
 DATA=	docbook.css
 
 .include "${DOC_PREFIX}/share/mk/web.site.mk"
+
+reformat:
+.for _f in ${HTMLFILES}
+	${TIDY} -preserve -omit -latin1 ${_f} > ${_f}.tmp || true
+	mv ${_f}.tmp ${_f}
+.endfor
