--- a/en_US.ISO8859-1/htdocs/releases/10.0R/Makefile
+++ b/en_US.ISO8859-1/htdocs/releases/10.0R/Makefile
@@ -9,6 +9,12 @@
 
 DOCS=	schedule.xml
 
-DATA=	docbook.css
+DATA=	docbook.css \
+	errata.html \
+	hardware.html \
+	installation.html \
+	readme.html \
+	relnotes.html
+
 
 .include "${DOC_PREFIX}/share/mk/web.site.mk"
