--- a/en_US.ISO8859-1/htdocs/releases/10.0R/Makefile
+++ b/en_US.ISO8859-1/htdocs/releases/10.0R/Makefile
@@ -7,7 +7,8 @@
 .include "../Makefile.inc"
 .endif
 
-DOCS=	schedule.xml
+DOCS=	announce.xml
+DOCS+=	schedule.xml
 
 DATA=	docbook.css \
 	errata.html \
