Update more parts of the Greek Handbook to the latest versions
Highlights:
- 'vinum' chapter removed from build
- Mostly untranslated 'disks' chapter replaced with the latest
  en_US version

Note that the 'users' chapter still remains in the Greek Handbook
for reference until it is updated and merged with 'basics'

New revisions:

	preface		r43126
	disks		r43449
	book.xml	r43566
	chapters.ent	r43126
	Makefile	r43126

Obtained From:	The FreeBSD Greek Documentation Project


git-svn-id: https://svn.freebsd.org/doc/head@43640 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/el_GR.ISO8859-7/books/handbook/Makefile
+++ b/el_GR.ISO8859-7/books/handbook/Makefile
@@ -4,7 +4,7 @@
 # Μορφοποίηση του Εγχειριδίου του FreeBSD
 #
 # %SOURCE%	en_US.ISO8859-1/books/handbook/Makefile
-# %SRCID%	1.119
+# %SRCID%	43126
 #
 
 # ------------------------------------------------------------------------
@@ -50,6 +50,7 @@ IMAGES_EN = advanced-networking/isdn-bus.eps
 IMAGES_EN+= advanced-networking/isdn-twisted-pair.eps
 IMAGES_EN+= advanced-networking/natd.eps
 IMAGES_EN+= advanced-networking/net-routing.pic
+IMAGES_EN+= advanced-networking/pxe-nfs.png
 IMAGES_EN+= advanced-networking/static-routes.pic
 IMAGES_EN+= bsdinstall/bsdinstall-adduser1.png
 IMAGES_EN+= bsdinstall/bsdinstall-adduser2.png
@@ -179,13 +180,6 @@ IMAGES_EN+= security/ipsec-network.pic
 IMAGES_EN+= security/ipsec-crypt-pkt.pic
 IMAGES_EN+= security/ipsec-encap-pkt.pic
 IMAGES_EN+= security/ipsec-out-pkt.pic
-IMAGES_EN+= vinum/vinum-concat.pic
-IMAGES_EN+= vinum/vinum-mirrored-vol.pic
-IMAGES_EN+= vinum/vinum-raid10-vol.pic
-IMAGES_EN+= vinum/vinum-raid5-org.pic
-IMAGES_EN+= vinum/vinum-simple-vol.pic
-IMAGES_EN+= vinum/vinum-striped-vol.pic
-IMAGES_EN+= vinum/vinum-striped.pic
 IMAGES_EN+= virtualization/parallels-freebsd1.png
 IMAGES_EN+= virtualization/parallels-freebsd2.png
 IMAGES_EN+= virtualization/parallels-freebsd3.png
@@ -283,8 +277,8 @@ SRCS+= preface/preface.xml
 SRCS+= printing/chapter.xml
 SRCS+= security/chapter.xml
 SRCS+= serialcomms/chapter.xml
+# Users chapter stays in the Greek Build until merged with basics
 SRCS+= users/chapter.xml
-SRCS+= vinum/chapter.xml
 SRCS+= virtualization/chapter.xml
 SRCS+= x11/chapter.xml
 
@@ -316,12 +310,12 @@ DOC_PREFIX?=	${.CURDIR}/../../..
 # rules generating lists of mirror site from XML database.
 #
 XMLDOCS=	lastmod:::mirrors.lastmod.inc \
-		mirrors-ftp:::mirrors.xml.ftp.inc \
 		mirrors-ftp-index:::mirrors.xml.ftp.index.inc \
-		mirrors-cvsup:::mirrors.xml.cvsup.inc \
+		mirrors-ftp:::mirrors.xml.ftp.inc \
 		mirrors-cvsup-index:::mirrors.xml.cvsup.index.inc \
-		eresources:::eresources.xml.www.inc \
-		eresources-index:::eresources.xml.www.index.inc
+		mirrors-cvsup:::mirrors.xml.cvsup.inc \
+		eresources-index:::eresources.xml.www.index.inc \
+		eresources:::eresources.xml.www.inc
 DEPENDSET.DEFAULT=	transtable mirror
 XSLT.DEFAULT=		${XSL_MIRRORS}
 XML.DEFAULT=		${XML_MIRRORS}
