--- a/ja_JP.eucJP/htdocs/releases/Makefile
+++ b/ja_JP.eucJP/htdocs/releases/Makefile
@@ -24,7 +24,7 @@ SUBDIR+=	5.0R 5.1R 5.2R 5.2.1R 5.3R 5.4R
 SUBDIR+=	8.2R 8.3R 8.4R
 #SUBDIR+=	9.0R 9.1R 9.2R
 SUBDIR+=	9.0R 9.2R
-#SUBDIR+=	10.0R
+SUBDIR+=	10.0R
 
 .if defined(NEW_BUILD)
 SUBDIR=
