Include SectionIterator.pm.
Sponsored by:	The FreeBSD Foundation


git-svn-id: https://svn.freebsd.org/doc/head@43824 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/cgi/GnatsPR/Makefile
+++ b/en_US.ISO8859-1/htdocs/cgi/GnatsPR/Makefile
@@ -9,6 +9,6 @@
 
 SUBDIR=	Section
 
-DATA=	MIMEIterator.pm Section.pm
+DATA=	MIMEIterator.pm Section.pm SectionIterator.pm
 
 .include "${DOC_PREFIX}/share/mk/web.site.mk"
