--- a/en_US.ISO8859-1/books/porters-handbook/Makefile
+++ b/en_US.ISO8859-1/books/porters-handbook/Makefile
@@ -19,6 +19,22 @@ INSTALL_ONLY_COMPRESSED?=
 #
 
 # XML content
+#SRCS+= quick-porting/chapter.xml
+#SRCS+= own-port/chapter.xml
+#SRCS+= porting-why/chapter.xml
+SRCS+= makefiles/chapter.xml
+#SRCS+= plist/chapter.xml
+#SRCS+= testing/chapter.xml
+#SRCS+= security/chapter.xml
+#SRCS+= porting-samplem/chapter.xml
+#SRCS+= appendices/chapter.xml
+#SRCS+= keeping-up/chapter.xml
+#SRCS+= porting-dads/chapter.xml
+#SRCS+= upgrading/chapter.xml
+#SRCS+= pkg-files/chapter.xml
+#SRCS+= specials/chapter.xml
+#SRCS+= slow-porting/chapter.xml
+
 SRCS=  book.xml
 SRCS+= uses.xml
 SRCS+= versions.xml
@@ -48,5 +64,15 @@ IMAGES_LIB+=	callouts/21.png
 
 URL_RELPREFIX?=	../../../..
 DOC_PREFIX?= ${.CURDIR}/../../..
+
+# Entities
+SRCS+= chapters.ent
+
+SYMLINKS=       ${DESTDIR} index.html handbook.html
+
+# Turn on all the chapters.
+CHAPTERS?= ${SRCS:M*chapter.xml}
+
+XMLFLAGS+= ${CHAPTERS:S/\/chapter.xml//:S/^/-i chap./}
 
 .include "${DOC_PREFIX}/share/mk/doc.project.mk"
