Uncomment and sort SRCS.  This doesn't break the build because the docproj makefile glue will descend into the directories regardless but this is more clear with the intent.
git-svn-id: https://svn.freebsd.org/doc/head@43841 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/books/porters-handbook/Makefile
+++ b/en_US.ISO8859-1/books/porters-handbook/Makefile
@@ -19,21 +19,21 @@ INSTALL_ONLY_COMPRESSED?=
 #
 
 # XML content
-#SRCS+= quick-porting/chapter.xml
-#SRCS+= own-port/chapter.xml
-#SRCS+= porting-why/chapter.xml
+SRCS+= porting-why/chapter.xml
+SRCS+= new-port/chapter.xml
+SRCS+= quick-porting/chapter.xml
+SRCS+= slow-porting/chapter.xml
 SRCS+= makefiles/chapter.xml
-#SRCS+= plist/chapter.xml
-#SRCS+= testing/chapter.xml
-#SRCS+= security/chapter.xml
-#SRCS+= porting-samplem/chapter.xml
-#SRCS+= appendices/chapter.xml
-#SRCS+= keeping-up/chapter.xml
-#SRCS+= porting-dads/chapter.xml
-#SRCS+= upgrading/chapter.xml
-#SRCS+= pkg-files/chapter.xml
-#SRCS+= specials/chapter.xml
-#SRCS+= slow-porting/chapter.xml
+SRCS+= special/chapter.xml
+SRCS+= plist/chapter.xml
+SRCS+= pkg-files/chapter.xml
+SRCS+= testing/chapter.xml
+SRCS+= upgrading/chapter.xml
+SRCS+= security/chapter.xml
+SRCS+= porting-dads/chapter.xml
+SRCS+= porting-samplem/chapter.xml
+SRCS+= keeping-up/chapter.xml
+SRCS+= appendices/chapter.xml
 
 SRCS=  book.xml
 SRCS+= uses.xml
