Formally publish the FreeBSD Project's software license policy as approved by core@ in February of 2008.
Requested by:	bz
Reviewed by:	gjb


git-svn-id: https://svn.freebsd.org/doc/head@43876 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/internal/Makefile
+++ b/en_US.ISO8859-1/htdocs/internal/Makefile
@@ -26,6 +26,7 @@ DOCS+=	policies.xml
 DOCS+=	proposing-committers.xml
 DOCS+=  releng.xml
 DOCS+=  resources.xml
+DOCS+=  software-license.xml
 DOCS+=	statistic.xml
 DOCS+=	working-with-hats.xml
 
