- Merge the following from the English version:
	r35386 -> r36665	head/ja_JP.eucJP/articles/contributors/Makefile
	r35368 -> r38558	head/ja_JP.eucJP/articles/contributors/article.xml


git-svn-id: https://svn.freebsd.org/doc/head@43965 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/ja_JP.eucJP/articles/contributors/Makefile
+++ b/ja_JP.eucJP/articles/contributors/Makefile
@@ -3,7 +3,7 @@
 #
 # Article: Contributors to FreeBSD
 #
-# Original revision: r35386
+# Original revision: r36665
 
 DOC?= article
 
@@ -23,6 +23,7 @@ SRCS+=	${ORGDIR}/contrib.committers.xml
 SRCS+=	${ORGDIR}/contrib.corealumni.xml
 SRCS+=	${ORGDIR}/contrib.develalumni.xml
 SRCS+=	${ORGDIR}/contrib.develinmemoriam.xml
+SRCS+=	${ORGDIR}/contrib.portmgralumni.xml
 
 URL_RELPREFIX?=	../../../..
 DOC_PREFIX?=	${.CURDIR}/../../..
