Add a poster and thumbnail for Google Summer of Code 2014.
git-svn-id: https://svn.freebsd.org/doc/head@44198 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/projects/Makefile
+++ b/en_US.ISO8859-1/htdocs/projects/Makefile
@@ -24,6 +24,8 @@ DATA+=	2011-freebsd-gsoc-thumbnail.jpg
 DATA+=	2011-freebsd-gsoc.pdf
 DATA+=	2013-freebsd-gsoc-thumbnail.jpg
 DATA+=	2013-freebsd-gsoc.pdf
+DATA+=	2014-freebsd-gsoc-thumbnail.jpg
+DATA+=	2014-freebsd-gsoc.pdf
 
 INDEXLINK= projects.html
 
