Move most of the PGP keys out of the Handbook into a separate article. The new article is in articles/pgpkeys.
Approved by:	so, accounts, core, re, portmgr@ (implicit, no objections)


git-svn-id: https://svn.freebsd.org/doc/head@44243 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/articles/Makefile
+++ b/en_US.ISO8859-1/articles/Makefile
@@ -34,6 +34,7 @@ SUBDIR+= nanobsd
 SUBDIR+= new-users
 SUBDIR+= p4-primer
 SUBDIR+= pam
+SUBDIR+= pgpkeys
 SUBDIR+= port-mentor-guidelines
 SUBDIR+= portbuild
 SUBDIR+= pr-guidelines
