--- a/en_US.ISO8859-1/htdocs/releases/9.3R/Makefile
+++ b/en_US.ISO8859-1/htdocs/releases/9.3R/Makefile
@@ -10,6 +10,8 @@
 DOCS=	schedule.xml \
 	todo.xml
 
-DATA=	docbook.css
+DATA=	docbook.css \
+	installation.html \
+	relnotes.html
 
 .include "${DOC_PREFIX}/share/mk/web.site.mk"
